# PichaScan

./: .gitignore  .qmlls.ini  CMakeLists.txt  readme.md  res.qrc
python/: test.ipynb
res/: Logomark.rc
setup/: PichaScan.iss
src/: CroppedView.cpp  CroppedView.h  ImageEditorView.cpp  ImageEditorView.h  ImageSaver.cpp  ImageSaver.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Project.cpp  Project.h  QuadrilateralItem.cpp  QuadrilateralItem.h  ScanProcessor.cpp  ScanProcessor.h  ScannerInterface.cpp  ScannerInterface.h  StartWindow.cpp  StartWindow.h  StartWindow.ui  WiaScanner.cpp  WiaScanner.h  main.cpp
src/qml/: map.qml
ui/: MainWindow.ui
